# my-resume

./: .dockerignore  .gitignore  ANSIBLE_VAULT_API_KEYS_QUICKSTART.md  AWS_SES_DEPLOYMENT_STATUS.md  AWS_SES_IMPLEMENTATION.md  AWS_SES_SETUP.md  BULLMQ_LANGCHAIN_SETUP.md  CHAT_ANALYTICS_SUMMARY.md  CHAT_ENDPOINT_404_FIX.md  CHAT_FLOW_CONFIG.md  CLOUDFRONT_DEPLOYMENT.md  CLOUD_DEPLOYMENT_ARCHITECTURE.md  COMPANY_ENRICHMENT_ARCHITECTURE.md  COMPANY_ENRICHMENT_FLOW.md  COMPANY_NAME_NORMALIZATION.md  COMPLETION_SUMMARY.md  GCP_DEPLOYMENT_GUIDE.md  HOW_TO_ACCESS_ANALYTICS.md  HYBRID_CLOUD_DEPLOYMENT.md  JWT_AUTH_GUIDE.md  JWT_IMPLEMENTATION_COMPLETE.md  LLM_API_KEY_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PRODUCTION_FIX.md  PUBLISHING_BINARIES.md  README.md  RECRUITER_INTEREST_IMPLEMENTATION.md  RECRUITER_INTEREST_QUICKSTART.md  SECRETS_MANAGEMENT.md  TESTING_FILE_ATTACHMENTS.md  TEST_SUCCESS.md  WEBHOOK_IMPLEMENTATION_COMPLETE.md  check-company-linkage.sh  check-normalization.sql  check-production-health.sh  cloudbuild-api.yaml  cloudbuild-frontend.yaml  (+26 more)
apps/llm-service/: .env.example  .gitignore  CAREER_INFO.md  CELERY.md  DEPLOY_FASTAPI.md  FASTAPI_MIGRATION.md  OPERATIONS.md  PROMPT_MIGRATION.md  README.md  REMOTE_LLAMA.md  api_client.py  api_key_auth.py  app.py  app_fastapi.py  app_remote.py  celery_config.py  company_research_agent.py  environment.yml  llm_guard_service.py  llm_wrapper.py  load_resume.py  musashi_index_agent.py  position_fit_agent.py  prompt_manager.py  pyproject.toml  requirements.txt  run-fastapi.sh  run.sh  setup_conda.sh  setup_poetry.sh  start-celery-worker.sh  start-flower.sh  tasks.py  test_prompts.py  (+7 more)
(+447 files in other folders)
