[tool.poetry]
name = "llm-service"
version = "1.0.0"
description = "Flask API service for resume chatbot using LLAMA on RTX 3090"
authors = ["Jose Blanco"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
llama-cpp-python = "^0.2.27"
numpy = "^1.24.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
