[tool.poetry]
name = "llm-service"
version = "1.0.0"
description = "Flask API service for resume chatbot using LLAMA on RTX 3090"
authors = ["Jose Blanco"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
llama-cpp-python = "^0.2.27"
numpy = "^1.24.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"
# psycopg2-binary removed - now using API calls instead of direct DB access
googlesearch-python = "^1.2.4"
beautifulsoup4 = "^4.12.3"
langchain = "^0.1.0"
langchain-core = "^0.1.10"
langchain-community = "^0.0.13"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"
llm-guard = "^0.3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
